fixes welcome on small screens

--- a/assets/css/partials.css
+++ b/assets/css/partials.css
@@ -281,6 +281,8 @@ h1.list-header-title {
 
 /* END List Pagination CSS */
 
+/* PAGE SPECIFIC CSS */
+
 /*
 * Title Page CSS
 */
@@ -302,7 +304,6 @@ h1.list-header-title {
     padding: 0.5em 0em 0.7em 0em;
     position: absolute;
     left: 30%;
-    width: 40%;
     text-align: center;
     background-color: #ecedef;
     z-index: 1;
